# artist

./: .gitignore  CMakeLists.txt  README.md
res/: mainwindow.glade
src/: actionmanager.h  app.cpp  app.h  artist.cpp  artistlib.cpp  artistlib.h  luacontainer.cpp  luacontainer.h  lualib.cpp  lualib.h  main.cpp  mainwindow.cpp  mainwindow.h  msg.h  myarea.cpp  packagemanager.cpp  packagemanager.h
src/pixels/: bitmap.cpp  bitmap.h
src/tools/: brush.cpp  brush.h  brushbezier.cpp  brushbezier.h  brushdefault.cpp  brushdefault.h  luatool.cpp  luatool.h  tool.cpp  tool.h  tools.cpp  tools.h
src/ui/: actionproxy.cpp  actionproxy.h  mainwindow.cpp  mainwindow.h  myarea.cpp  myarea.h
src/utils/: callsave.c  callsave.h  fileloader.cpp  fileloader.h
